<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/judul_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="40sp"/>

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textSize="20sp"/>

</LinearLayout>